--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Matthijs Alderliefste</h1>
 <h2>Projects</h2>
-<ol>
-    <li>State of the world</li>
-</ol>
+<ul>
+    <li><a>State of the world</a></li>
+</ul>
